--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Inthanin_Project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mongo-java-driver-2.13.3.jar=add-on\\mongo-java-driver-2.13.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mongo-java-driver-2.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=inthanin_project.Inthanin_Project
+main.class=Inthanin_Project
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
