--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.mongo-java-driver-2.13.3.jar=add-on\\mongo-java-driver-2.13.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mongo-java-driver-2.13.3.jar}
+    ${file.reference.mongo-java-driver-2.13.3.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
