--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/Inthanin_Project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=G:\\Backup\\jdatechooser\\DateChooser.jar
 file.reference.mongo-java-driver-2.13.3.jar=add-on\\mongo-java-driver-2.13.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -37,7 +38,8 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mongo-java-driver-2.13.3.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
