--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=G:\\Backup\\jdatechooser\\DateChooser.jar
+file.reference.DJNativeSwing.jar=lib\\DJNativeSwing.jar
+file.reference.itextpdf-5.1.0.jar=C:\\Users\\thech\\OneDrive\\Documents\\GitHub\\Dulce\\Dulce_Simply\\lib\\itextpdf-5.1.0.jar
 file.reference.mongo-java-driver-2.13.3.jar=add-on\\mongo-java-driver-2.13.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -39,7 +41,9 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mongo-java-driver-2.13.3.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.DateChooser.jar}
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar}:\
+    ${file.reference.DJNativeSwing.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
