--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,9 +31,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=G:\\Backup\\jdatechooser\\DateChooser.jar
+file.reference.DateChooser.jar-1=C:\\Users\\informatics\\Documents\\NetBeansProjects\\Inthanin_Project\\lib\\DateChooser.jar
 file.reference.DJNativeSwing.jar=lib\\DJNativeSwing.jar
 file.reference.itextpdf-5.1.0.jar=C:\\Users\\thech\\OneDrive\\Documents\\GitHub\\Dulce\\Dulce_Simply\\lib\\itextpdf-5.1.0.jar
+file.reference.itextpdf-5.1.0.jar-1=C:\\Users\\informatics\\Documents\\NetBeansProjects\\Inthanin_Project\\lib\\itextpdf-5.1.0.jar
 file.reference.mongo-java-driver-2.13.3.jar=add-on\\mongo-java-driver-2.13.3.jar
+file.reference.mongo-java-driver-2.13.3.jar-1=C:\\Users\\informatics\\Documents\\NetBeansProjects\\Inthanin_Project\\lib\\mongo-java-driver-2.13.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -43,7 +46,10 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.itextpdf-5.1.0.jar}:\
-    ${file.reference.DJNativeSwing.jar}
+    ${file.reference.DJNativeSwing.jar}:\
+    ${file.reference.DateChooser.jar-1}:\
+    ${file.reference.itextpdf-5.1.0.jar-1}:\
+    ${file.reference.mongo-java-driver-2.13.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
