--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.itextpdf-5.1.0.jar=C:\\Users\\thech\\OneDrive\\Documents\\GitHub\
 file.reference.itextpdf-5.1.0.jar-1=C:\\Users\\informatics\\Documents\\NetBeansProjects\\Inthanin_Project\\lib\\itextpdf-5.1.0.jar
 file.reference.mongo-java-driver-2.13.3.jar=add-on\\mongo-java-driver-2.13.3.jar
 file.reference.mongo-java-driver-2.13.3.jar-1=C:\\Users\\informatics\\Documents\\NetBeansProjects\\Inthanin_Project\\lib\\mongo-java-driver-2.13.3.jar
+file.reference.mongo-java-driver-2.13.3.jar-2=lib\\mongo-java-driver-2.13.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.DJNativeSwing.jar}:\
     ${file.reference.DateChooser.jar-1}:\
     ${file.reference.itextpdf-5.1.0.jar-1}:\
-    ${file.reference.mongo-java-driver-2.13.3.jar-1}
+    ${file.reference.mongo-java-driver-2.13.3.jar-1}:\
+    ${file.reference.mongo-java-driver-2.13.3.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
