Changing some import library!!

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=\u0e42\u0e1b\u0e23\u0e41\u0e01\u0e23\u0e21\u0e19\u0e35\u0e49\u0e08\u0e31\u0e14\u0e17\u0e33\u0e02\u0e36\u0e49\u0e19\u0e40\u0e1e\u0e37\u0e48\u0e2d\u0e43\u0e0a\u0e49\u0e43\u0e19\u0e01\u0e32\u0e23\u0e02\u0e32\u0e22\u0e2b\u0e19\u0e49\u0e32\u0e23\u0e49\u0e32\u0e19 Inthanin Coffee \u0e40\u0e17\u0e48\u0e32\u0e19\u0e31\u0e49\u0e19 \u0e2b\u0e32\u0e01\u0e21\u0e35\u0e01\u0e32\u0e23\n\u0e14\u0e31\u0e14\u0e41\u0e1b\u0e25\u0e07 \u0e41\u0e01\u0e49\u0e44\u0e02 \u0e2b\u0e23\u0e37\u0e2d\u0e17\u0e33\u0e0b\u0e49\u0e33 \u0e08\u0e30\u0e21\u0e35\u0e01\u0e32\u0e23\u0e14\u0e33\u0e40\u0e19\u0e34\u0e19\u0e04\u0e14\u0e35\u0e15\u0e32\u0e21\u0e01\u0e0f\u0e2b\u0e21\u0e32\u0e22
 application.title=Inthanin.exe
 application.vendor=Yonshisoru
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
@@ -40,7 +41,7 @@ file.reference.mongo-java-driver-2.13.3.jar-1=C:\\Users\\informatics\\Documents\
 file.reference.mongo-java-driver-2.13.3.jar-2=lib\\mongo-java-driver-2.13.3.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
-jar.compress=false
+jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mongo-java-driver-2.13.3.jar}:\
@@ -66,7 +67,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -74,7 +75,7 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
@@ -98,6 +99,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.license=gpl20
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
